# asteroids

./: .appveyor.yml  .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  config.h.in
build-support/cmake/: Findcatch.cmake  Findd3dx12.cmake  Findglfw.cmake  igpa-targets.cmake
projects/: asteroids.sln  asteroids.vcxproj  asteroids.vcxproj.filters
projects/vs2017/: AnalyzeCode.props  CatchTest.props  GlobalMSVC.props  Outputs.props  asteroids.sln  asteroids.vcxproj  asteroids.vcxproj.filters  catch.vcxproj  catch.vcxproj.filters  clang-tidy.vcxproj  glfw.vcxproj  glfw.vcxproj.filters  graphics-test.vcxproj  graphics-test.vcxproj.filters  graphics.vcxproj  graphics.vcxproj.filters
projects/xcode/asteroids.xcodeproj/: project.pbxproj
projects/xcode/asteroids.xcodeproj/project.xcworkspace/xcshareddata/: WorkspaceSettings.xcsettings
src/: CMakeLists.txt  main.c
src/asteroids/: CMakeLists.txt  application.cpp  application.h  main.c  main.cpp  mesh.cpp  mesh.h  noise.h  simplexnoise1234.h
src/asteroids/assets/shaders/glsl/: simple.frag  simple.vert
src/asteroids/assets/shaders/hlsl/: simple-ps.hlsl  simple-vs.hlsl  simple_vs.hlsl
src/gfx/: CMakeLists.txt  gfx-internal.h  gfx.c
src/gfx/d3d12/: gfx-d3d12-helper.cpp  gfx-d3d12-helper.h  gfx-d3d12.c  gfx-d3d12.cpp  gfx-d3d12.h
src/gfx/include/gfx/: gfx.h
src/gfx/metal/: gfx-metal-helper.h  gfx-metal-helper.m  gfx-metal.h  gfx-metal.m
src/gfx/test/: gfx-test.cpp
src/gfx/vulkan/: gfx-vulkan-helper.c  gfx-vulkan-helper.h  gfx-vulkan-swapchain.c  gfx-vulkan-swapchain.h  gfx-vulkan.c  gfx-vulkan.h
src/graphics/: graphics-d3d12.cpp  graphics-d3d12.h  graphics.cpp
src/graphics/d3d12/: command-buffer-d3d12.cpp  command-buffer-d3d12.h  graphics-d3d12.cpp  graphics-d3d12.h
src/graphics/include/graphics/: graphics.h
src/graphics/metal/: command-buffer-metal.h  command-buffer-metal.mm  graphics-metal.h  graphics-metal.mm
src/graphics/vulkan/: command-buffer-vulkan.cpp  command-buffer-vulkan.h  graphics-vulkan.cpp  graphics-vulkan.h  vulkan-debug.h  vulkan-device-method-list.inl  vulkan-global-method-list.inl  vulkan-instance-method-list.inl
test/graphics/: graphics-test.cpp
